# PhysicsTools

./: .gitignore  README.md  data.py  graph.py  make_docs.bat  pi_reinstall.bat  pyproject.toml  reinstall.bat  requirements.txt  setup.py  table.py
.github/workflows/: python-tests.yml
docs/: conf.py  data.md  getting-started.md  graph.md  index.rst  requirements.txt  scripting.md  table.md
docs/api/: index.rst  physics_utils.data.math.rst  physics_utils.data.rst  physics_utils.graph.rst  physics_utils.table.rst
examples/: best_fit.py  measured_data_examples.py  multiple_datasets.py  scatterplot.py
physics_tools/: __init__.py  graph.py  table.py
physics_utils/: data.py  table.py
physics_utils/data/: measureddata.py  util.py
physics_utils/script/: Expr.g4  block.py  build_antlr.bat  builtin.py  control.py  datatypes.py  environment.py  expressions.py  main.py  statements.py  visitor_interpreter.py
tests/: test_measured_data.py
